--- a/README.rdoc
+++ b/README.rdoc
@@ -12,7 +12,7 @@ Tiny plugin for MongoMapper to sanitize strings before validation.
 Either load it into all models, or individual models:
 
     # add to all models
-    MongoMapper::Document.append_inclusions(MongoMapper::Plugins::Sanitize)
+    MongoMapper::Document.plugin(MongoMapper::Plugins::Sanitize)
 
     # add to a specific model
     plugin MongoMapper::Plugins::Sanitize
